empezando html main

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -2,23 +2,12 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-    <!-- SEO -->
-    <!-- Meta Keywords -->
-    <meta name="keywords" content="Tarjetas, NVIDIA, Computacion, Componentes, PC Store">
-    <!-- Meta Description -->
-    <meta name="description" content="Sitio Web ecommerce de computacion ">
-    <!-- Favicon  -->
-    <link rel="shortcut icon" href="assets/images/favicon/favicon.png">
-
-
     <!-- Link a CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <!--Linkeo fuente Roboto-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,19 +18,12 @@
 
 
     <!-- Titulo de la pagina -->
-    <title>DX System Store</title>
-
+    <title>Nosotros | DX ST</title>
+    
 </head>
-
 
 <body>
 
-
-
-
-
-    <!-- Link a Java Script -->
-    <script src="js/sec.js"></script>
 </body>
 
 </html>
