pagina principal casi terminada

--- a/index.html
+++ b/index.html
@@ -35,11 +35,195 @@
 
 
 <body>
+    <!-- Contenedor de la pagina -->
+    <div class="main_wrapper">
+
+        <div class="nav_and_header">
+
+            <!--** NAVIGATION BAR **-->
+            <div class="navbar">
+
+                <img src="assets/images/logo/logo_ss.png" alt="">
+
+                <nav>
+                    <ul>
+                        <li><a href="">Productos</a></li>
+                        <li><a href="">Nosotros</a></li>
+                        <li><a href="">Contacto</a></li>
+                        <li><a href="">Mi cuenta</a></li>
+
+                    </ul>
+                </nav>
+            </div>
+
+            <!-- ---------------------------------------------------------------------------------------------------- -->
+
+            <!--** HEADER **-->
+            <header>
+                <div class="header-text">
+                    <div class="header-text_cont">
+                        <h1>Las mejores Tarjetas Graficas del mercado</h1>
+
+                        <p>Tenemos lo ultimo en Tarjetas Graficas, todas tus marcas favoritas al mejor precio</p>
+                        <a href="" class="btn">Conoce más</a>
+                    </div>
+                </div>
+
+                <div class="header-img">
+                    <img src="assets/images/header/header_img.png" alt="">
+                </div>
+            </header>
+        </div>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
+        <!--** MAIN **-->
+        <main>
+            <!-- Seccion Imagenes -->
+            <section class="section_img">
+
+                <div class="section_img-01">
+                    <img src="assets/images/main/sect_img-01.jpg" alt="">
+                </div>
+
+                <div class="section_img-02">
+                    <img src="assets/images/main/sect_img-02.jpg" alt="">
+                </div>
+
+                <div class="section_img-03">
+                    <img src="assets/images/main/sect_img-03.jpg" alt="">
+                </div>
+            </section>
+
+
+            <!-- Seccion Mas Vendido -->
+            <section class="section_mas_vendido">
+
+                <h3>Top Productos</h3>
+
+                <div class="sect_mv_cont">
+                    <div class="sect_mv_01">
+                        <img src="assets/images/main/sect_top-01.jpg" alt="">
+                        <h4>Palit RTX 3060 12GB</h4>
+                        <p>$620</p>
+                    </div>
+
+                    <div class="sect_mv_02">
+                        <img src="assets/images/main/sect_top-02.jpg" alt="">
+                        <h4>Asus RTX3050 8G</h4>
+                        <p>$520</p>
+                    </div>
+
+                    <div class="sect_mv_03">
+                        <img src="assets/images/main/sect_top-03.jpg" alt="">
+                        <h4>Asus RTX 3060 12GB</h4>
+                        <p>$650</p>
+                    </div>
+
+                    <div class="sect_mv_04">
+                        <img src="assets/images/main/sect_top-04.jpg" alt="">
+                        <h4>MSI RTX 3080 12GB</h4>
+                        <p>$1450</p>
+                    </div>
+                </div>
+
+            </section>
 
 
 
+            <!-- Seccion Nuevos productos -->
+            <section class="section_nuevos_productos">
 
+                <h3>Nuevos Productos</h3>
 
+                <div class="sect_np_cont">
+                    <div class="sect_np_01">
+                        <img src="assets/images/main/sect_np-01.jpg" alt="">
+                        <h4>ASUS RTX 3080Ti 12GB</h4>
+                        <p>$2420</p>
+                    </div>
+
+                    <div class="sect_np_02">
+                        <img src="assets/images/main/sect_np-02.jpg" alt="">
+                        <h4>Palit RTX 3070Ti 8G</h4>
+                        <p>$1040</p>
+                    </div>
+
+                    <div class="sect_np_03">
+                        <img src="assets/images/main/sect_np-03.jpg" alt="">
+                        <h4>Asus RTX 3070Ti 8GB</h4>
+                        <p>$1100</p>
+                    </div>
+
+                    <div class="sect_np_04">
+                        <img src="assets/images/main/sect_np-04.jpg" alt="">
+                        <h4>Asus RTX 3090Ti 24GB</h4>
+                        <p>$2580</p>
+                    </div>
+                </div>
+
+            </section>
+        </main>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
+        <!--** FOOTER **-->
+        <footer>
+            <div class="footer_cont">
+                <div class="footer_cont-1">
+                    <h4>Siguenos en:</h4>
+
+                    <div class="footer_cont-sn">
+                        <a href="https://www.instagram.com/" target="_blank"><img
+                                src="assets/images/footer/ico-insta.svg"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img
+                                src="assets/images/footer/ico-face.svg"></a>
+                        <a href="https://twitter.com/" target="_blank"><img src="assets/images/footer/ico-twi.svg"></a>
+                        <a href="https://www.youtube.com/" target="_blank"><img
+                                src="assets/images/footer/ico-yout.svg"></a>
+                    </div>
+
+                </div>
+
+                <div class="footer_cont-2">
+                    <div class="footer_cont-2t">
+                        <img src="assets/images/logo/logo_ss.png" alt="">
+
+                        <p>Nuestro proposito es traerte las mejores tarjetas graficas, de las mejores marcas al mejor
+                            precio</p>
+                    </div>
+                </div>
+
+                <div class="footer_cont-3">
+
+                    <div class="footer-cont-3p1">
+                        <h4>Servicio al cliente</h4>
+                        <ul>
+                            <li><a href="">Productos</a></li>
+                            <li><a href="">Nosotros</a></li>
+                            <li><a href="">Contacto</a></li>
+                            <li><a href="">Mi cuenta</a></li>
+
+                        </ul>
+                    </div>
+
+                    <div class="footer-cont-3p2">
+                        <h4>DX System Store</h4>
+                        <ul>
+                            <li><a href="">Productos</a></li>
+                            <li><a href="">Nosotros</a></li>
+                            <li><a href="">Contacto</a></li>
+                            <li><a href="">Mi cuenta</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
+    </div>
     <!-- Link a Java Script -->
     <script src="js/sec.js"></script>
 </body>
