pagina main casito terminada, con disenos

--- a/index.html
+++ b/index.html
@@ -43,17 +43,20 @@
             <!--** NAVIGATION BAR **-->
             <div class="navbar">
 
-                <img src="assets/images/logo/logo_ss.png" alt="">
+                <img class="img_logo" src="assets/images/logo/logo_ss.png" alt="">
 
                 <nav>
                     <ul>
                         <li><a href="">Productos</a></li>
                         <li><a href="">Nosotros</a></li>
                         <li><a href="">Contacto</a></li>
-                        <li><a href="">Mi cuenta</a></li>
+                        <li><a href="">Usuario</a></li>
 
                     </ul>
                 </nav>
+
+                <a class="img_shop-cont" href="#"><img class="img_shop" src="assets/images/nav/shopping-cart.png" alt=""></a>
+                
             </div>
 
             <!-- ---------------------------------------------------------------------------------------------------- -->
@@ -106,24 +109,28 @@
                         <img src="assets/images/main/sect_top-01.jpg" alt="">
                         <h4>Palit RTX 3060 12GB</h4>
                         <p>$620</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
 
                     <div class="sect_mv_02">
                         <img src="assets/images/main/sect_top-02.jpg" alt="">
                         <h4>Asus RTX3050 8G</h4>
                         <p>$520</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
 
                     <div class="sect_mv_03">
                         <img src="assets/images/main/sect_top-03.jpg" alt="">
                         <h4>Asus RTX 3060 12GB</h4>
                         <p>$650</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
 
                     <div class="sect_mv_04">
                         <img src="assets/images/main/sect_top-04.jpg" alt="">
                         <h4>MSI RTX 3080 12GB</h4>
                         <p>$1450</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
                 </div>
 
@@ -141,24 +148,28 @@
                         <img src="assets/images/main/sect_np-01.jpg" alt="">
                         <h4>ASUS RTX 3080Ti 12GB</h4>
                         <p>$2420</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
 
                     <div class="sect_np_02">
                         <img src="assets/images/main/sect_np-02.jpg" alt="">
                         <h4>Palit RTX 3070Ti 8G</h4>
                         <p>$1040</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
 
                     <div class="sect_np_03">
                         <img src="assets/images/main/sect_np-03.jpg" alt="">
                         <h4>Asus RTX 3070Ti 8GB</h4>
                         <p>$1100</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
 
                     <div class="sect_np_04">
                         <img src="assets/images/main/sect_np-04.jpg" alt="">
                         <h4>Asus RTX 3090Ti 24GB</h4>
                         <p>$2580</p>
+                        <a href="" class="btn">Agregar al carrito</a>
                     </div>
                 </div>
 
