Incorporacion de favicon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta name="keywords" content="Tarjetas, NVIDIA, Computacion, Componentes, PC Store">
     <!-- Meta Description -->
     <meta name="description" content="Sitio Web ecommerce de computacion ">
-    <!-- Favicon  -->
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon/favicon.ico" />
 
 
 
