entrega 2 proyecto final

--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
             <!--** NAVIGATION BAR **-->
             <div class="navbar">
 
-                <img class="img_logo" src="assets/images/logo/logo_ss.png" alt="">
+                <a class="link_img_logo" href="index.html"><img class="img_logo" src="assets/images/logo/logo_ss.png" alt=""></a>
+                
 
                 <nav>
                     <ul>
-                        <li><a href="">Productos</a></li>
-                        <li><a href="">Nosotros</a></li>
-                        <li><a href="">Contacto</a></li>
-                        <li><a href="">Usuario</a></li>
+                        <li><a href="pages/productos.html">Productos</a></li>
+                        <li><a href="pages/nosotros.html">Nosotros</a></li>
+                        <li><a href="pages/contacto.html">Contacto</a></li>
+                        <li><a href="pages/mi_cuenta.html">Usuario</a></li>
 
                     </ul>
                 </nav>
@@ -69,7 +70,7 @@
                         <h1>Las mejores Tarjetas Graficas del mercado</h1>
 
                         <p>Tenemos lo ultimo en Tarjetas Graficas, todas tus marcas favoritas al mejor precio</p>
-                        <a href="" class="btn">Conoce más</a>
+                        <a href="pages/productos.html" class="btn-conoce">Conoce más</a>
                     </div>
                 </div>
 
@@ -106,33 +107,7 @@
                 <h3>Top Productos</h3>
 
                 <div class="sect_mv_cont">
-                    <div class="sect_mv_01">
-                        <img src="assets/images/main/sect_top-01.jpg" alt="">
-                        <h4>Palit RTX 3060 12GB</h4>
-                        <p>$620</p>
-                        <a href="#" class="btn">Agregar al carrito</a>
-                    </div>
 
-                    <div class="sect_mv_02">
-                        <img src="assets/images/main/sect_top-02.jpg" alt="">
-                        <h4>Asus RTX3050 8G</h4>
-                        <p>$520</p>
-                        <a href="#" class="btn">Agregar al carrito</a>
-                    </div>
-
-                    <div class="sect_mv_03">
-                        <img src="assets/images/main/sect_top-03.jpg" alt="">
-                        <h4>Asus RTX 3060 12GB</h4>
-                        <p>$650</p>
-                        <a href="#" class="btn">Agregar al carrito</a>
-                    </div>
-
-                    <div class="sect_mv_04">
-                        <img src="assets/images/main/sect_top-04.jpg" alt="">
-                        <h4>MSI RTX 3080 12GB</h4>
-                        <p>$1450</p>
-                        <a href="#" class="btn" >Agregar al carrito</a>
-                    </div>
                 </div>
 
             </section>
@@ -145,33 +120,7 @@
                 <h3>Nuevos Productos</h3>
 
                 <div class="sect_np_cont">
-                    <div class="sect_np_01">
-                        <img src="assets/images/main/sect_np-01.jpg" alt="">
-                        <h4>ASUS RTX 3080Ti 12GB</h4>
-                        <p>$2420</p>
-                        <a href="#" class="btn">Agregar al carrito</a>
-                    </div>
 
-                    <div class="sect_np_02">
-                        <img src="assets/images/main/sect_np-02.jpg" alt="">
-                        <h4>Palit RTX 3070Ti 8G</h4>
-                        <p>$1040</p>
-                        <a href="" class="btn" >Agregar al carrito</a>
-                    </div>
-
-                    <div class="sect_np_03">
-                        <img src="assets/images/main/sect_np-03.jpg" alt="">
-                        <h4>Asus RTX 3070Ti 8GB</h4>
-                        <p>$1100</p>
-                        <a href="#" class="btn" >Agregar al carrito</a>
-                    </div>
-
-                    <div class="sect_np_04">
-                        <img src="assets/images/main/sect_np-04.jpg" alt="">
-                        <h4>Asus RTX 3090Ti 24GB</h4>
-                        <p>$2580</p>
-                        <a href="#" class="btn" >Agregar al carrito</a>
-                    </div>
                 </div>
 
             </section>
@@ -237,6 +186,7 @@
 
     </div>
     <!-- Link a Java Script -->
+    <script src="js/productos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
