--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,6 +24,96 @@
 
 <body>
 
+    <div class="cont-contacto">
+
+        <!-- NAV -->
+        <div class="nav2">
+
+            <a class="link_img_logo" href="../index.html"><img class="img_logo" src="../assets/images/logo/logo_ss.png" alt=""></a>
+
+            <input type="text" name="search" placeholder="Buscar" class="buscador" autocomplete="off">
+
+            <nav>
+                <ul>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="mi_cuenta.html">Usuario</a></li>
+
+                </ul>
+            </nav>
+
+            <a class="img_shop-cont2" href="#"><img class="img_shop2" src="../assets/images/ico/carrito-01.png" alt=""></a>
+
+        </div>
+
+
+        <!-- MAIN -->
+        <main>
+            <h2>Contacto</h2>
+        </main>
+
+
+        
+        <!--** FOOTER **-->
+        <footer>
+            <div class="footer_cont">
+                <div class="footer_cont-1">
+                    <h4>Siguenos en:</h4>
+
+                    <div class="footer_cont-sn">
+                        <a href="https://www.instagram.com/" target="_blank"><img
+                                src="../assets/images/footer/ico-insta.svg"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img
+                                src="../assets/images/footer/ico-face.svg"></a>
+                        <a href="https://twitter.com/" target="_blank"><img
+                                src="../assets/images/footer/ico-twi.svg"></a>
+                        <a href="https://www.youtube.com/" target="_blank"><img
+                                src="../assets/images/footer/ico-yout.svg"></a>
+                    </div>
+
+                </div>
+
+                <div class="footer_cont-2">
+                    <div class="footer_cont-2t">
+                        <img src="../assets/images/logo/logo_ss.png" alt="">
+
+                        <p>Nuestro proposito es traerte las mejores tarjetas graficas, de las mejores marcas al mejor
+                            precio</p>
+                    </div>
+                </div>
+
+                <div class="footer_cont-3">
+
+                    <div class="footer-cont-3p1">
+                        <h4>Servicio al cliente</h4>
+                        <ul>
+                            <li><a href="">Productos</a></li>
+                            <li><a href="">Nosotros</a></li>
+                            <li><a href="">Contacto</a></li>
+                            <li><a href="">Mi cuenta</a></li>
+
+                        </ul>
+                    </div>
+
+                    <div class="footer-cont-3p2">
+                        <h4>DX System Store</h4>
+                        <ul>
+                            <li><a href="">Productos</a></li>
+                            <li><a href="">Nosotros</a></li>
+                            <li><a href="">Contacto</a></li>
+                            <li><a href="">Mi cuenta</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
+
+    </div>
 </body>
 
 </html>
