carrito semi terminado 2

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -61,6 +61,19 @@
                     <div class="cont-pop-carrito" id="cont-prod-carrito">
 
                     </div>
+
+                        <!-- Totales -->
+                        <div class="totales-cPopUp">
+                            <div class="tCPopUp">
+                                <p class="tCPopUp-total">TOTAL</p>
+                                <p class="tCPopUp-precio">10001</p>
+                            </div>
+
+                            <div class="btnTotal">
+                                <a class="btnTotal-01" href="">Iniciar Pago</a>
+                                <a class="btnTotal-02" href="">Cancelar todo</a>
+                            </div>
+                        </div>
                 </div>
             </div>
 
