error sin solucionar

--- a/pages/mi_cuenta.html
+++ b/pages/mi_cuenta.html
@@ -64,8 +64,8 @@
                     <!-- Totales -->
                     <div class="totales-cPopUp">
                         <div class="tCPopUp">
-                            <p class="tCPopUp-total">TOTAL</p>
-                            <p class="tCPopUp-precio">10001</p>
+                            <p class="tCPopUp-total">TOTAL:</p>
+                            <p class="tCPopUp-precio" id="tpp-precio">0</p>
                         </div>
 
                         <div class="btnTotal">
