--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="pages/productos.html">Productos</a></li>
+                        <li><a href="pages/catalogo_productos.html">Productos</a></li>
                         <li><a href="pages/nosotros.html">Nosotros</a></li>
                         <li><a href="pages/contacto.html">Contacto</a></li>
                         <li><a href="pages/mi_cuenta.html">Usuario</a></li>
@@ -218,7 +218,7 @@
 
     </div>
     <!-- Link a Java Script -->
-    <script src="js/productos.js"></script>
+    <script src="js/stockMain.js"></script>
     <script src="js/carrito.js"></script>
     <script src="js/main.js"></script>
 </body>
