--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,7 +39,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="catalogo_productos.html">Productos</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="mi_cuenta.html">Usuario</a></li>
@@ -147,7 +147,7 @@
 
     </div>
     <!-- Link a Java Script -->
-    <script src="../js/productos2.js"></script>
+    <script src="../js/stockSec.js"></script>
     <script src="../js/carrito.js"></script>
     <script src="../js/pages.js"></script>
 
