--- a/pages/catalogo_productos.html
+++ b/pages/catalogo_productos.html
@@ -38,7 +38,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="catalogo_productos.html">Productos</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="mi_cuenta.html">Usuario</a></li>
@@ -152,9 +152,9 @@
 
     </div>
     <!-- Link a Java Script -->
-    <script src="../js/productos2.js"></script>
+    <script src="../js/stockSec.js"></script>
     <script src="../js/carrito.js"></script>
-    <script src="../js/prd.js"></script>
+    <script src="../js/catalogo_productos.js"></script>
 
 
 </body>
