carrito codigo finalizado, falta filtrar

--- a/pages/mi_cuenta.html
+++ b/pages/mi_cuenta.html
@@ -70,7 +70,7 @@
 
                         <div class="btnTotal">
                             <a class="btnTotal-01" href="">Iniciar Pago</a>
-                            <a class="btnTotal-02" href="">Cancelar todo</a>
+                            <a class="btnTotal-02" id="btnEliminarTodo" onclick="borrarTodoDelCarrito()" href="#">Cancelar todo</a>
                         </div>
                     </div>
                 </div>
