--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <!-- Libreria JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    <!-- Libreria SweetAlert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+
+    <!-- Libreria SweetAlert -->
+    <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+
     <!-- Titulo de la pagina -->
     <title>DX System Store</title>
 
@@ -63,8 +69,8 @@
                 <!-- Boton Carrito -->
                 <div class="carrito_cont">
                     <span id="numCar" class="numCar-total">0</span>
-                    <a class="img_shop-cont2" href="#" onclick="generarCardsCPopUp()"><img class="img_shop2" src="assets/images/ico/carrito-02.png"
-                            alt=""></a>
+                    <a class="img_shop-cont2" href="#" onclick="generarCardsCPopUp()"><img class="img_shop2"
+                            src="assets/images/ico/carrito-02.png" alt=""></a>
                 </div>
 
                 <!-- PopUP -->
@@ -73,9 +79,9 @@
                         <div class="close-cont"><a href="#" class="close">X</a></div>
 
                         <div class="cont-pop-carrito" id="cont-prod-carrito">
-                   
+
                         </div>
-                        
+
                         <!-- Totales -->
                         <div class="totales-cPopUp">
                             <div class="tCPopUp">
@@ -85,7 +91,8 @@
 
                             <div class="btnTotal">
                                 <a class="btnTotal-01" href="#">Iniciar Pago</a>
-                                <a class="btnTotal-02" id="btnEliminarTodo" onclick="borrarTodoDelCarrito()" href="#">Cancelar todo</a>
+                                <a class="btnTotal-02" id="btnEliminarTodo" onclick="borrarTodoDelCarrito()"
+                                    href="#">Cancelar todo</a>
                             </div>
                         </div>
                     </div>
@@ -217,10 +224,16 @@
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
     </div>
+
+
+
     <!-- Link a Java Script -->
+
     <script src="js/stockMain.js"></script>
     <script src="js/carrito.js"></script>
     <script src="js/main.js"></script>
+
+
 </body>
 
 </html>
