--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,7 +71,8 @@
 
                         <div class="btnTotal">
                             <a class="btnTotal-01" href="">Iniciar Pago</a>
-                            <a class="btnTotal-02" id="btnEliminarTodo" onclick="borrarTodoDelCarrito()" href="#">Cancelar todo</a>
+                            <a class="btnTotal-02" id="btnEliminarTodo" onclick="borrarTodoDelCarrito()"
+                                href="#">Cancelar todo</a>
                         </div>
                     </div>
                 </div>
