proyecto con stock en .json e imagenes subidas en la nube

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <h1>Las mejores Tarjetas Graficas del mercado</h1>
 
                         <p>Tenemos lo ultimo en Tarjetas Graficas, todas tus marcas favoritas al mejor precio</p>
-                        <a href="pages/productos.html" class="btn-conoce">Conoce más</a>
+                        <a href="pages/catalogo_productos.html" class="btn-conoce">Conoce más</a>
                     </div>
                 </div>
 
@@ -145,7 +145,7 @@
 
                 <h3>Top Productos</h3>
 
-                <div class="sect_mv_cont">
+                <div class="sect_mv_cont" id="sect_mv_cont">
 
                 </div>
 
@@ -158,7 +158,7 @@
 
                 <h3>Nuevos Productos</h3>
 
-                <div class="sect_np_cont">
+                <div class="sect_np_cont" id="sect_np_cont">
 
                 </div>
 
