--- a/pages/catalogo_productos.html
+++ b/pages/catalogo_productos.html
@@ -89,7 +89,7 @@
             <h2 class="productos-titulo">Productos</h2>
 
 
-            <div class="cont-productos-main">
+            <div class="cont-productos-main" id="cont-productos-main">
 
             </div>
 
