--- a/pages/catalogo_productos.html
+++ b/pages/catalogo_productos.html
@@ -88,6 +88,35 @@
         <main>
             <h2 class="productos-titulo">Productos</h2>
 
+            <div class="barra_filtros">
+                <div class="cont_bf">
+                    <p class="p_bf">Ordenar por:</p>
+                    <div class="cont_bf_total">
+                        <select name="select" id="selectPrec" onchange="selectPrec()">
+                            <option value="value1_1" selected> </option>
+                            <option value="value1_2">Precio de menor a mayor</option>
+                            <option value="value1_3">Precio de mayor a menor</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="cont_bf">
+                    <p class="p_bf">Ordenar por Marca:</p>
+                    <div class="cont_bf_total">
+                        <select name="select2" id="selectNomb" onchange="selectNom()">
+                            <option value="value2_1" selected>Todas</option>
+                            <option value="value2_2">GTX 1660</option>
+                            <option value="value2_3">RTX 2060</option>
+                            <option value="value2_4">RTX 3050</option>
+                            <option value="value2_5">RTX 3060</option>
+                            <option value="value2_6">RTX 3070</option>
+                            <option value="value2_7">RTX 3080</option>
+                            <option value="value2_8">RTX 3090</option>
+
+                        </select>
+                    </div>
+                </div>
+            </div>
 
             <div class="cont-productos-main" id="cont-productos-main">
 
@@ -157,7 +186,6 @@
     </div>
 
     <!-- Link a Java Script -->
-    <script src="../js/stockSec.js"></script>
     <script src="../js/carrito.js"></script>
     <script src="../js/catalogo_productos.js"></script>
 
