pagina casi terminada

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,7 +83,30 @@
 
         <!-- MAIN -->
         <main>
-            <h2>Contacto</h2>
+            <div class="cont-main_contacto">
+                <h2>Formulario de contacto</h2>
+                <p>Nuestro horarios de atención son de Lunes a Viernes de 8:30 a 18:00 hrs.</p>
+
+                <div class="cont-form-contacto">
+                    <label for="name">Nombre</label>
+                    <input class="inp" type="text" name="" id="name" required>
+
+                    <label for="lastName">Apellido</label>
+                    <input class="inp" type="text" name="" id="lastName" required>
+
+                    <label for="name">Email</label>
+                    <input class="inp" type="email" name="" id="name" required>
+
+                    
+                    <label for="name">Telefono</label>
+                    <input class="inp" type="tel" name="" id="name" required>
+
+                    <label for="name">Mensaje</label>
+                    <textarea name="" id="message" ></textarea required>
+
+                        <input class="btn" type="submit" value="Enviar">
+                </div>
+            </div>
         </main>
 
 
