--- a/pages/mi_cuenta.html
+++ b/pages/mi_cuenta.html
@@ -81,8 +81,27 @@
 
 
         <!-- MAIN -->
-        <main>
-            <h2>Mi cuenta</h2>
+        <main class="main_cont-micuenta">
+            <form method="post">
+                <h3>Inicia sesion</h3>
+
+                <div class="usuario">
+                    <label>Nombre de Usuario</label>
+                    <input type="text" required>
+                </div>
+
+                <div class="usuario">
+                    <label>Contraseña</label>
+                    <input type="password" required>
+                </div>
+
+                <a href="#">Olvidaste la contraseña?</a>
+
+                <input class="boton-ingresar" type="submit" value="Ingresar">
+
+                <a href="#">Crear cuenta</a>
+
+            </form>
         </main>
 
 
