--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
         <!--** MAIN **-->
-        <main>
+        <main class="main_index">
             <!-- Seccion Imagenes -->
             <section class="section_img">
 
